--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/lodash.merge": "^4.6.7",
     "@emotion/babel-plugin": "^11.10.6",
     "@emotion/babel-preset-css-prop": "^11.10.0",
     "@rollup/plugin-babel": "^6.0.3",
