--- a/package.json
+++ b/package.json
@@ -11,49 +11,24 @@
     "format": "prettier --write **/*.{js,ts,tsx} && eslint . --ext js,ts,tsx --fix"
   },
   "dependencies": {
-    "@amcharts/amcharts5": "^5.3.11",
-    "@amcharts/amcharts5-fonts": "^5.0.1",
-    "@amcharts/amcharts5-geodata": "^5.1.0",
     "@ant-design/cssinjs": "^1.8.1",
     "@ant-design/plots": "^1.2.5",
-    "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.1.0",
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.10.6",
-    "@microsoft/signalr": "^7.0.4",
     "@reduxjs/toolkit": "^1.9.3",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
     "bootstrap-scss": "^5.2.3",
-    "cors": "^2.8.5",
     "history": "^5.3.0",
-    "js-file-download": "^0.4.12",
-    "jsx-runtime": "^1.2.0",
-    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "match-sorter": "^6.3.1",
-    "mockjs": "^1.1.0",
-    "moment": "^2.29.4",
     "postcss-loader": "^7.2.4",
     "postcss-nesting": "^11.2.2",
-    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-clock": "^4.2.0",
-    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-file-icon": "^1.3.0",
-    "react-highlight-words": "^0.20.0",
-    "react-hooks-global-state": "^2.1.0",
-    "react-icons": "^4.8.0",
     "react-intl": "^6.3.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-router-redux": "^4.0.8",
-    "reactstrap": "^9.1.8",
-    "redux-form": "^8.3.10",
-    "sweetalert2": "^11.7.3",
-    "uuid": "^9.0.0"
+    "react-router-redux": "^4.0.8"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
@@ -61,16 +36,12 @@
     "@emotion/babel-preset-css-prop": "^11.10.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@types/lodash": "^4.14.192",
-    "@types/mockjs": "^1.0.7",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "@types/react-file-icon": "^1.0.1",
-    "@types/react-highlight-words": "^0.16.4",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-form": "^8.3.5",
-    "@types/uuid": "^9.0.1",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
