--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ant-design/cssinjs": "^1.8.1",
     "@ant-design/plots": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.3",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.10.6",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
     "bootstrap-scss": "^5.2.3",
@@ -31,11 +33,11 @@
     "react-router-redux": "^4.0.8"
   },
   "devDependencies": {
-    "@types/lodash.merge": "^4.6.7",
     "@emotion/babel-plugin": "^11.10.6",
     "@emotion/babel-preset-css-prop": "^11.10.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@types/lodash": "^4.14.192",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
